--- a/public/javascripts/Angular/Views/mainView.html
+++ b/public/javascripts/Angular/Views/mainView.html
@@ -1,14 +1,17 @@
 <hr>
 
 <div class="row">
-  <div class="panel small-6 large-6 columns text-center">
-    <p>
-      This is panel #1
-    </p>
+  <div class="panel small-2 large-2 columns">
+    <button class="small button" ng-click="foo()" >Load camera</button>
   </div>
-  <div class="panel small-6 large-6 columns text-center">
-    <p>
-      This is panel #2
-    </p>
+  <div class="panel small-7 large-7 columns text-center">
+    
+    <video id="theirs" autoplay></video>
+  
+  </div>
+  <div class="panel small-3 large-3 columns">
+    <div class="text-center">
+      <video id="yours" autoplay></video>
+    </div>
   </div>
 </div>
